--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "element-plus": "^2.8.4",
     "markdown-it": "^14.1.0",
     "path": "^0.12.7",
+    "pinia": "^2.2.3",
+    "qs": "^6.13.0",
     "vue": "^3.4.35",
     "vue-router": "^4.4.3",
     "vuex": "^4.1.0"
@@ -18,7 +22,10 @@
   "devDependencies": {
     "@types/markdown-it": "^14.1.2",
     "@vitejs/plugin-vue": "^5.1.2",
+    "sass-embedded": "^1.79.4",
     "typescript": "^5.5.3",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.0",
     "vue-tsc": "^2.0.29"
   }
